# qtsuite

./: .gitignore  README.md
cfd/qt02-cfd-qlsa-chal/: 00-tridiag-in.toml  CIRCUIT_ANALYSIS.md  README.md  UQ-USAGE.md  WORKFLOW_REFERENCE.md  analyze_scaling.py  chal.py  chal01-in-noise.toml  chal01-in.toml  chal01.py  compare_tridiag_heleshaw.py  get_wf_args.py  in-PhysicalSize.toml  in-PhysicalSize2.toml  in-QubitScaling.toml  in-Scaling.toml  main_workflow.py  noise.py  plot_condition_number.py  plot_error_focus.py  plot_fidelity_comparison.py  plot_fidelity_vs_error.py  plot_gate_density.py  plot_key_metrics.py  plot_light_cone.py  plot_parallelism.py  plot_reconstructed.py  plot_solution_quality.py  plot_untranspiled_scaling.py  plot_uq_three_way.py  plotting.py  plotting_scaling.py  postprocess_results.py  pyproject.toml  reconstruct_results.py  uq_analysis.py  uq_analysis_hhl.py  wf01.py
cfd/qt02-cfd-qlsa-chal/Z-OLD/: a-in.toml-KEEP  chal-1circ.py-OLD  getIBMSims.py
cfd/qt02-cfd-qlsa-chal/docs/: nq-matrix-impact-analysis.md  parameter-mutual-exclusivity.md
cfd/qt02-cfd-qlsa-chal/input/: in-32MeshxBackend.toml  in-3Qubit-Shots.toml  in-ConditionNumber.toml  in-MeshxShots.toml  in-PhysicalSize.toml  in-PhysicalSize2.toml  in-Scaling.toml  in-circuit-scaling-study.toml  in-heleshaw-shots-study.toml  in-hs-fez.toml  in-hs-mesh-backend-sweep.toml  in-hs-torino-sim.toml  in-hs-torino.toml  in-multi-range.toml  in-noise-study-hs.toml  in-noise-study.toml  in-simple-hs.toml  in-tridiag-comparison.toml  in-tridiag-nq4.toml  in-tridiag-shots-study.toml  test-run.toml
cfd/qt05-fvm-euler-1d/: .gitconfig-helper.sh  .gitignore  CHUNKED_ITERATIONS.md  README.md  pyproject.toml  setup.py  wf.py  wf_circuit_executor.py  wf_mine_results.py  wf_postprocess.py  wf_report_generator.py  wf_time_solver.py
cfd/qt05-fvm-euler-1d/input/: 00-in.toml  01-in.toml  02-in.toml  03-chunked-in.toml  local-in.toml
cfd/qt05-fvm-euler-1d/scripts/: run_chunked_workflow.sh  wf.sh  wf.sl
cfd/qt06-fvm-euler-wf/: case_exec.py  case_postproc.py  case_preproc.py  pyproject.toml  wf01.py
cfd/qt06-fvm-euler-wf/input/: in-01.toml
examples/qt01-examples-wciscc2025/: README.md  pyproject.toml  setup.py  test01.py  test02.py  test03.py  test_01.py  test_02.py
examples/qt02-examples-pennylane/: README.md  pyproject.toml  test01.py
examples/qt03-examples-lwfm-OLD/: README.md  pyproject.toml  test01.py
examples/qt04-examples-sqd/: NOT-WORKING.txt  n2_fci.txt  pyproject.toml  test01-in.toml  test01.py
examples/qt04-examples-sqd/old/: active_space_fcidump.txt  exact_fcidump.txt  generate_fcidump_molecule.py  test01-in-twoways.toml  test01-twoways.py  test01.py  test01_fixed.py  test_fcidump.txt  test_systematic.py  wf01.py
examples/qt05-examples-benchqc/: README.md  pyproject.toml  test01.py
examples/qt06-examples-ibm-materials/: README.md  pyproject.toml  setup.py  test01.py
examples/qt07-examples-quantumreservoirpy/: pyproject.toml  test01.py
examples/qt07-examples-quantumreservoirpy-WIP/: pyproject.toml  test01.py
examples/qt08-examples-qiskit/: pyproject.toml  test01 copy.py  test01.py
mat/qt01-mat-sqd/: wf01.py  (+11 more)
mat/qt02-mat-wannier-est/: .python-version  get_wf_args.py  pyproject.toml  test01.py  test01.toml
mat/qt03-ham-from-fci/: pyproject.toml  test01.py
mat/qt04-skqd/: 0.py  0_boston.py  0_kingston.py  1.py  2.py  3.py  4.py  5.py  6.py  7_local_boston.py  7_local_boston_no_grade.py  README.md  bit_array_boston.npz  bit_array_kingston.npz  calculate_exact_energy.py  check_backend_specs.py  check_serverless.py  check_serverless_job.py  compare_backends.py  compare_backends_v2.py  compute_boston.py  ct.py  diagonalization_engine.py  estimate_exact_energy.py  post.py  print_result.py  pyproject.toml  refresh_credentials.py  result_boston.npz  run-skqd.py  run-study-skqd.py  step2_krylov.py  step3_transpile.py  step4_execute.py  step5_postprocess.py  submit_boston.py  submit_serverless.py  test_comprehensive.py  test_debug.py  test_diagonal_check.py  (+14 more)
mat/qt04-skqd/input/: smoke-test.toml  study-example.toml
qp4p/: README.md  pyproject.toml  smoke_test.sh  sweeper.sh
qp4p/docs/: case_output_schema.md  misc_notes.md
qp4p/helpers/src/: analyze_json_structure.py  experiment_explorer.py  qp4p_args.py  qp4p_chem.py  qp4p_circuit.py  qp4p_image_gallery.py  qp4p_linear_system.py  qp4p_opt.py  qp4p_output.py  qp4p_print_open_cmd.py  qp4p_sweeper.py  qp4p_util.py  qp4p_vqe.py  smoke_test.py
qp4p/mod0/: README.md  qubits.py
qp4p/mod0/input/: gs_qpe.toml  gs_qpe_noise.toml  hello_world_bell.toml  qubits.toml
qp4p/mod0/src/: grovers.py  gs_qpe.py  hello_world.py  hello_world_bell.py  image_flip.py  phase_kickback.py  postproc_echo.py  postproc_noise.py  qubits.py
qp4p/mod0/src/postproc/: ghz_uq_postproc.py
qp4p/mod1/: README.md
qp4p/mod1/input/: ax_equals_b.toml  ax_equals_b_vqls.toml  gs_qpe.toml  gs_vqe.toml  image_flip.toml  lattice.toml  lattice_vqe.toml  phase_kickback.toml
qp4p/mod1/src/: ax_equals_b.py  ax_equals_b_vlqs.py  ax_equals_b_vqls.py  grovers.py  gs_qpe.py  gs_vqe.py  image_flip.py  lattice.py  lattice_vqe.py  phase_kickback.py  postproc_noise.py
qp4p/mod1/src/postproc/: __init__.py  __main__.py  echo.py  grovers_viz.py  image_viz.py  lattice_viz.py  linear_system_viz.py  noise.py  phase_kickback_viz.py  qpe_viz.py  vqe_viz.py
qp4p/mod2/: README.md
qp4p/mod2/input/: ax_equals_b_comparison.toml  ax_equals_b_hhl.toml  ax_equals_b_hhl_qrisp.toml  grovers.toml
qp4p/mod2/src/: ax_equals_b_cks_qrisp_est.py  ax_equals_b_hhl.py  ax_equals_b_hhl_qrisp.py  grovers.py
qp4p/mod2/src/postproc/: algorithm_comparison_viz.py  grovers_viz.py
qp4p/mod3/: README.md  gs.py
qp4p/mod3/input/: est_wannier.toml  gs_comparison.toml  gs_siam_skqd.toml  gs_sqd.toml
qp4p/mod3/src/: est_wannier.py  est_wannier.py-BROKE  gs_siam_skqd.py  gs_sqd.py  gs_vqe.py
qp4p/mod3/src/postproc/: gs_comparison_viz.py  skqd_viz.py  sqd_viz.py
qtlib/: README.md  USAGE.md  pyproject.toml
qtlib/src/qtlib/: __init__.py  workflow.py
test/wciscc/: config.py  pyproject.toml  test_01.py
(+48 files in other folders)
