[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qp4p"
version = "0.1.0"
description = "Quantum Programming for Programmers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "qiskit>=2.0",
    "qiskit-ibm-runtime",
    "qiskit_qasm3_import",
    "qiskit_aer",
    "qiskit_algorithms >=0.4",
    "qiskit_nature",
    "pennylane",
    "matplotlib",
    "pylatexenc",
    "numpy",
    "pyscf",
    "tomli",
]

[tool.setuptools]
py-modules = ["qp4p_helpers"]
package-dir = {"" = "helpers/src"}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0305",  # trailing-newlines
    "C0303",  # trailing-whitespace
]
