[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt02-cfd-qlsa-chal"
version = "0.1.0"
description = "examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit>=2.0",
    "qiskit-ibm-runtime",
    "qiskit_qasm3_import",
    "qiskit_aer",
    "pyscf>=2.10.0",
    "numpy",
    "qiskit_addon_sqd",
    "matplotlib",
    "scipy>=1.15.0,<1.17.0",
    "toml",
    "pyyaml",
    "quantum_linear_solvers", # @ git+https://github.com/jw676/quantum_linear_solvers.git",
    "lwfm @ git+https://github.com/lwfm-proj/lwfm@develop",
    "qiskit-ionq"
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


