[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt02-cfd-qlsa-chal"
version = "0.1.0"
description = "examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit",
    "toml",
    "numpy",
    "matplotlib",
    "lwfm @ git+https://github.com/lwfm-proj/lwfm@develop",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


