[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt05-cfd-fvm-euler-1d"
version = "0.1.0"
description = "euler 1d"
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Declare that dependencies will also come from setup.py
dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {where = [".", "../../qtlib"]}}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
