[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt05-cfd-fvm-euler-1d"
version = "0.1.0"
description = "euler 1d"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "toml",
    "qtlib",
    "fvm-euler-1d-solver",
]

[tool.uv.sources]
qtlib = { path = "../../qtlib", editable = true }
# For private repo: set GIT_USER_KEY="username:token" in environment
# uv will use git credential helper or you can use: git config --global url."https://${GIT_USER_KEY}@github.com/".insteadOf "https://github.com/"
fvm-euler-1d-solver = { git = "https://github.com/mhawwary/fvm_euler_1d_solver", branch = "feature/qiskit-hhl-2" }

[tool.setuptools]
packages = {find = {where = [".",]}}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
