[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt05-cfd-fvm-euler-1d"
version = "0.1.0"
description = "euler 1d"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "toml",
    "qtlib",
    "fvm-euler-1d-solver",
]

[tool.uv.sources]
qtlib = { path = "../../qtlib", editable = true }
# Run .gitconfig-helper.sh before uv sync to clone fvm_euler_1d_solver
fvm-euler-1d-solver = { path = "./fvm_euler_1d_solver", editable = true }

[tool.setuptools]
packages = {find = {where = [".",]}}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
