[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt01-examples-wciscc2025"
version = "0.1.0"
description = "examples using lwfm and ORNL's wciscc2025 lib for cfd - use their dependencies!"
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Declare that dependencies will also come from setup.py
dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
