[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt03-examples-sqd"
version = "0.1.0"
description = "examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lwfm@git+https://github.com/lwfm-proj/lwfm@develop",
    "qiskit>=2.0",
    "qiskit-ibm-runtime",
    "qiskit_qasm3_import",
    "qiskit_aer"
]

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


