[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt06-examples-ibm-materials"
version = "0.1.0"
description = "example using ibm materials foundation models"
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Declare that dependencies will also come from setup.py
dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
