[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt08-examples-qiskit"
version = "0.1.0"
description = "qiskit-specific examples for their learning value"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Pinned to ensure availability of SamplerV2 / EstimatorV2 APIs used in example.
    # Adjust versions if newer minor releases introduce breaking changes.
    "qiskit>=2.1.0",
    "qiskit-ibm-runtime>=0.25.0",
    "qiskit_qasm3_import>=0.5.0",
    "qiskit_aer>=0.15.0"
]

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


