[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt03-ham-from-fci"
version = "0.1.0"
description = "examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit",
    "qiskit-aer",
    "qiskit-ibm-runtime",
    "toml",
    "numpy",
    "matplotlib",
    "pyscf",
    "lwfm @ git+https://github.com/lwfm-proj/lwfm@develop",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


