[build-system]
requires = ["setuptools>=42", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "qtsuite_cfd_wciscc"
version = "0.1.0"
description = "quantum CFD test cases using the URNL WCISCC code for HHL"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "lwfm @ git+https://github.com/lwfm-proj/lwfm",
    "setuptools",
    "numpy",
    "scipy",
    "packaging>=24.2"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

